2015-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c (print_platform): Detect BSD variant.

2015-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Remove useless line.

2015-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* config/compile, config/config.guess,
	  config/config.sub, config/missing,
	  config/test-driver: Upgrade to automake 1.14.1

2015-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Cmdline.swg, perl/Amanda/Device.swg,
	  perl/Amanda/MainLoop.swg, perl/Amanda/NDMP.swg,
	  perl/Amanda/Util.swg: Fix linking issue.

2015-01-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Fix perl warning.

2015-01-14  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/components.m4: Remove AMANDA_JSON_SERVER and
	  WANT_JSON_SERVER.
	* config/amanda/json.m4: Remove file
	* perl/Amanda/JSON/*: Remove directory.
	* perl/Amanda/JSON.pm: Remove module.
	* perl/Makefile.am: Remove Amanda/JSON.pm and Amanda/JSON/*
	* server-src/Makefile.am: Remove amanda.psgi
	* server-src/amanda.psgi.pl: Remove file.

2015-01-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Vault.pm: Remove bogus print statement.

2015-01-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Add --src-labelstr argument.
	* perl/Amanda/DB/Catalog.pm: Match the labelstr.
	* perl/Amanda/Recovery/Planner.pm: Match the labelstr.
	* perl/Amanda/Util.swg (match_labelstr_expr): New method.
	* perl/Amanda/Vault.pm: Match the labelstr.
	* NEWS: Add new amvault --src-labelstr argument.

2015-01-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amfeatures.h: Add fe_sendbackup_rep_retry.
	* common-src/amfeatures.c: Add fe_sendbackup_rep_retry.
	* server-src/dumper.c: Accept a RETRY in the REP packet.

2015-01-06  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/ndmp.pm: Remove bogus confess.
