@@ -331,7 +331,7 @@ main(
     /* check that we don't do many dump in a day and usetimestamps is off */
     if(strlen(driver_timestamp) == 8) {
 	if (!nodump) {
-	    char *conf_logdir = getconf_str(CNF_LOGDIR);
+	    char *conf_logdir = config_dir_relative(getconf_str(CNF_LOGDIR));
 	    char *logfile    = g_strjoin(NULL, conf_logdir, "/log.",
 					 driver_timestamp, ".0", NULL);
 	    char *oldlogfile = g_strjoin(NULL, conf_logdir, "/oldlog/log.",
